{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 65,
  "lineage": "fee8b5f4-3553-0427-ffa8-cd9508f87530",
  "resources": [
    {
      "module": "module.jump_server",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jump_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20220719",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/zones/us-central1-a/disks/jump-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcp-2021-2-bookshelf-dineshs/zones/us-central1-a/instances/jump-server",
            "instance_id": "584023690362146599",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "Y_lYj2J8S4M=",
            "metadata_startup_script": "#! /bin/bash\n\nset -v \n\n# Talk to the metadata server to get the project id\nPROJECTID=$(curl -s \"http://metadata.google.internal/computeMetadata/v1/project/project-id\" -H \"Metadata-Flavor: Google\")\n\n\n# installing git\nsudo apt update\nsudo apt install git -y\n\n# installing ansible\nsudo apt install ansible -y\n\n# installing dependencies\nsudo apt install build-essential python3 python3-pip -y\n\n# Get the source code from the Google Cloud Repo [...]
            "name": "jump-server",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/global/networks/bookshelf-vpc",
                "network_ip": "10.0.0.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/regions/us-central1/subnetworks/bookshelf-subnet",
                "subnetwork_project": "gcp-2021-2-bookshelf-dineshs"
              }
            ],
            "project": "gcp-2021-2-bookshelf-dineshs",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/zones/us-central1-a/instances/jump-server",
            "service_account": [
              {
                "email": "bookshelf-terraform-sa@gcp-2021-2-bookshelf-dineshs.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh"
            ],
            "tags_fingerprint": "SFX9LNAOdG8=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.compute_resources.google_service_account.service_account",
            "module.network_resources.google_compute_network.vpc-network",
            "module.network_resources.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_resources",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/zones/us-central1-a/instanceGroups/bookshelf-instancegroup-manager",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-08-02T00:36:26.214-07:00",
            "enable_cdn": false,
            "fingerprint": "0dyY2vG5bgM=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/global/healthChecks/bookshelf-healthcheck"
            ],
            "id": "projects/gcp-2021-2-bookshelf-dineshs/global/backendServices/lb-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "lb-backend-service",
            "port_name": "http",
            "project": "gcp-2021-2-bookshelf-dineshs",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/global/backendServices/lb-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "module.compute_resources.google_compute_health_check.autohealing",
            "module.compute_resources.google_compute_instance_group_manager.appserver",
            "module.compute_resources.google_compute_instance_template.bookshelf-instance-template",
            "module.compute_resources.google_service_account.service_account",
            "module.network_resources.google_compute_network.vpc-network",
            "module.network_resources.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_resources",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-25T20:29:16.199-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/gcp-2021-2-bookshelf-dineshs/global/firewalls/allow-ssh",
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/global/networks/bookshelf-vpc",
            "priority": 1000,
            "project": "gcp-2021-2-bookshelf-dineshs",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/global/firewalls/allow-ssh",
            "source_ranges": [
              "10.0.0.0/20",
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_resources.google_compute_network.vpc-network"
          ]
        }
      ]
    },
    {
      "module": "module.network_resources",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-25T20:29:16.151-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/gcp-2021-2-bookshelf-dineshs/global/firewalls/allow-health-check",
            "name": "allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/global/networks/bookshelf-vpc",
            "priority": 1000,
            "project": "gcp-2021-2-bookshelf-dineshs",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/global/firewalls/allow-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_resources.google_compute_network.vpc-network"
          ]
        }
      ]
    },
    {
      "module": "module.network_resources",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.102.159.108",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-07-25T20:28:52.082-07:00",
            "id": "projects/gcp-2021-2-bookshelf-dineshs/global/addresses/lb-static-ip",
            "name": "lb-static-ip",
            "prefix_length": 0,
            "project": "gcp-2021-2-bookshelf-dineshs",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/global/addresses/lb-static-ip"
          }
        }
      ]
    },
    {
      "module": "module.network_resources",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.92.144.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-07-25T20:29:16.183-07:00",
            "id": "projects/gcp-2021-2-bookshelf-dineshs/global/addresses/private-ip-address",
            "name": "private-ip-address",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/global/networks/bookshelf-vpc",
            "prefix_length": 20,
            "project": "gcp-2021-2-bookshelf-dineshs",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/global/addresses/private-ip-address"
          },
          "dependencies": [
            "module.network_resources.google_compute_network.vpc-network"
          ]
        }
      ]
    },
    {
      "module": "module.network_resources",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/gcp-2021-2-bookshelf-dineshs/global/forwardingRules/lb-forwarding-rule",
            "ip_address": "34.102.159.108",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "lb-forwarding-rule",
            "port_range": "80-80",
            "project": "gcp-2021-2-bookshelf-dineshs",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/global/forwardingRules/lb-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/global/targetHttpProxies/lb-target-http-proxy"
          },
          "dependencies": [
            "module.compute_resources.google_compute_health_check.autohealing",
            "module.compute_resources.google_compute_instance_group_manager.appserver",
            "module.compute_resources.google_compute_instance_template.bookshelf-instance-template",
            "module.compute_resources.google_service_account.service_account",
            "module.network_resources.google_compute_backend_service.default",
            "module.network_resources.google_compute_global_address.default",
            "module.network_resources.google_compute_network.vpc-network",
            "module.network_resources.google_compute_subnetwork.subnet",
            "module.network_resources.google_compute_target_http_proxy.default",
            "module.network_resources.google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "module": "module.network_resources",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/gcp-2021-2-bookshelf-dineshs/global/networks/bookshelf-vpc",
            "name": "bookshelf-vpc",
            "project": "gcp-2021-2-bookshelf-dineshs",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/global/networks/bookshelf-vpc"
          }
        }
      ]
    },
    {
      "module": "module.network_resources",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514
              }
            ],
            "creation_timestamp": "2022-07-25T20:29:47.808-07:00",
            "id": "projects/gcp-2021-2-bookshelf-dineshs/regions/us-central1/routers/bookshelf-router",
            "name": "bookshelf-router",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/global/networks/bookshelf-vpc",
            "project": "gcp-2021-2-bookshelf-dineshs",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/regions/us-central1/routers/bookshelf-router"
          },
          "dependencies": [
            "module.network_resources.google_compute_network.vpc-network",
            "module.network_resources.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_resources",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "gcp-2021-2-bookshelf-dineshs/us-central1/bookshelf-router/bookshelf-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "bookshelf-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "gcp-2021-2-bookshelf-dineshs",
            "region": "us-central1",
            "router": "bookshelf-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.network_resources.google_compute_network.vpc-network",
            "module.network_resources.google_compute_router.router",
            "module.network_resources.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_resources",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-25T20:29:19.178-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/gcp-2021-2-bookshelf-dineshs/regions/us-central1/subnetworks/bookshelf-subnet",
            "ip_cidr_range": "10.0.0.0/20",
            "name": "bookshelf-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/global/networks/bookshelf-vpc",
            "private_ip_google_access": false,
            "project": "gcp-2021-2-bookshelf-dineshs",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.10.0/24",
                "range_name": "bookshelf-subnet-secondary-ip"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/regions/us-central1/subnetworks/bookshelf-subnet"
          },
          "dependencies": [
            "module.network_resources.google_compute_network.vpc-network"
          ]
        }
      ]
    },
    {
      "module": "module.network_resources",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-08-02T00:36:52.232-07:00",
            "id": "projects/gcp-2021-2-bookshelf-dineshs/global/targetHttpProxies/lb-target-http-proxy",
            "name": "lb-target-http-proxy",
            "project": "gcp-2021-2-bookshelf-dineshs",
            "proxy_id": 5669972341346888443,
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/global/targetHttpProxies/lb-target-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/global/urlMaps/lb-url-map"
          },
          "dependencies": [
            "module.compute_resources.google_compute_health_check.autohealing",
            "module.compute_resources.google_compute_instance_group_manager.appserver",
            "module.compute_resources.google_compute_instance_template.bookshelf-instance-template",
            "module.compute_resources.google_service_account.service_account",
            "module.network_resources.google_compute_backend_service.default",
            "module.network_resources.google_compute_network.vpc-network",
            "module.network_resources.google_compute_subnetwork.subnet",
            "module.network_resources.google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "module": "module.network_resources",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-08-02T00:36:49.629-07:00",
            "default_service": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/global/backendServices/lb-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "MFxJfC0rtDk=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/gcp-2021-2-bookshelf-dineshs/global/urlMaps/lb-url-map",
            "map_id": 1098580628053781246,
            "name": "lb-url-map",
            "path_matcher": [],
            "project": "gcp-2021-2-bookshelf-dineshs",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-dineshs/global/urlMaps/lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute_resources.google_compute_health_check.autohealing",
            "module.compute_resources.google_compute_instance_group_manager.appserver",
            "module.compute_resources.google_compute_instance_template.bookshelf-instance-template",
            "module.compute_resources.google_service_account.service_account",
            "module.network_resources.google_compute_backend_service.default",
            "module.network_resources.google_compute_network.vpc-network",
            "module.network_resources.google_compute_subnetwork.subnet"
          ]
        }
      ]
    }
  ]
}